      groups (and updated the web ui to support that) (CNY-600)
    * addEntitlement and deleteEntitlement repository calls replaced 
      by addEntitlements and deleteEntitlements calls
    * Added getTroveLeavesByPath and getTroveVersionsByPath. (for CNY-74)
    * Added a separate acl permission for being able to remove troves from
      a repository and updated the web UI to support it

  o Client Changes:
    * conary rq now --path, which allows you to search for troves in the 
      repository by path. (CNY-74)

Changes in @NEW@:
  o Server Changes:
    * The server binary access log can now be downloaded by an
      administrator by visiting the http://servername/conary/log
      URL. Once the log is accessed it is rotated automatically by the
      repository server. Subsequent accesses to the log URL will only
      yield log entries added since the last access. (CNY-638)
    * The Users and Groups tab in the web management UI is no longer
      highlighted when administrators change their passwords.

  o Client Changes:
    * Added --what-provides option to query and repquery

  o Bug Fixes:
    * The Conary Repository web interface no longer returns a
      HTTP_FORBIDDEN (403) when a bad password is given by the user.
      This allows the user to re-try authentication.
    * The --signatures and --buildreqs flags now work with conary
      showcs.  (CNY-642)
    * Fixed a bug in the NetworkRepositoryClient default pwPrompt mechanism.

Changes in 1.0.23:
  o API Additions:
    * The interface to create, list and delete access groups and
      modify the users therein through is now exposed though
      ConaryClient.
    * The interface to delete entitlement groups is now exposed
      through ConaryClient.

  o Client Changes:
    * "conary updateall" now accepts the --keep-required command line
      argument.
    * the mirror script now provides download/commit feedback using
      display callbacks like other conary commands